// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BlogForm /> Should render correctly 1`] = `
<div>
  <div
    class="sc-csuSiG"
  >
    <label
      class="sc-fEXmlR fcnjli"
      for="title_FORM_ID"
    >
      Title
    </label>
    <div
      class="sc-iBYQkv qDrdv sc-bqWxrE dvHoOv"
      placeholder="Title"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-dIfARi egSfao"
        id="title_FORM_ID"
        name="Title"
        value=""
      />
      <svg
        class="sc-gKPRtg eSdzmv sc-hHTYSt hQAsBU"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-fEXmlR fcnjli"
      for="tags_FORM_ID"
    >
      Tags
    </label>
    <div
      class="sc-iBYQkv qDrdv sc-bqWxrE dvHoOv"
      placeholder="Tags"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-dIfARi egSfao"
        id="tags_FORM_ID"
        name="Tags"
        value=""
      />
      <svg
        class="sc-gKPRtg eSdzmv sc-hHTYSt hQAsBU"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-fEXmlR fcnjli"
      for="blogImage_FORM_ID"
    >
      Blog image
    </label>
    <div
      class="sc-iBYQkv qDrdv sc-bqWxrE dvHoOv"
      placeholder="Blog image"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-dIfARi egSfao"
        id="blogImage_FORM_ID"
        name="Blog image"
        value=""
      />
      <svg
        class="sc-gKPRtg eSdzmv sc-hHTYSt hQAsBU"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-fEXmlR fcnjli"
      for="publishedTimestamp_FORM_ID"
    >
      Published timestamp
    </label>
    <div
      class="sc-iBYQkv qDrdv sc-bqWxrE dvHoOv"
      placeholder="Published timestamp"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-dIfARi egSfao"
        id="publishedTimestamp_FORM_ID"
        name="Published timestamp"
        value=""
      />
      <svg
        class="sc-gKPRtg eSdzmv sc-hHTYSt hQAsBU"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-fEXmlR fcnjli"
      for="blogCardDate_FORM_ID"
    >
      Blog card date override
    </label>
    <div
      class="sc-iBYQkv qDrdv sc-bqWxrE dvHoOv"
      placeholder="Blog card date override"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-dIfARi egSfao"
        id="blogCardDate_FORM_ID"
        name="Blog card date override"
        value=""
      />
      <svg
        class="sc-gKPRtg eSdzmv sc-hHTYSt hQAsBU"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-ftTHYK cnKNCo sc-fnGiBr dOtmda"
      id="light_FORM_ID"
    >
      <div
        class="sc-pyfCe cPxSom"
      >
        <input
          aria-invalid="false"
          aria-label="Light"
          class="sc-jrcTuL bUxtxE"
          name="Light"
          type="checkbox"
        />
        <svg
          class="sc-gKPRtg eSdzmv sc-kDvujY bYAPqH"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="sc-ipEyDJ enbqXF"
      >
        Light
      </div>
    </label>
    <label
      class="sc-ftTHYK cnKNCo sc-fnGiBr dOtmda"
      id="published_FORM_ID"
    >
      <div
        class="sc-pyfCe cPxSom"
      >
        <input
          aria-invalid="false"
          aria-label="Published"
          class="sc-jrcTuL bUxtxE"
          name="Published"
          type="checkbox"
        />
        <svg
          class="sc-gKPRtg eSdzmv sc-kDvujY bYAPqH"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="sc-ipEyDJ enbqXF"
      >
        Published
      </div>
    </label>
    <label
      class="sc-ftTHYK cnKNCo sc-fnGiBr dOtmda"
      id="showInBlogsList_FORM_ID"
    >
      <div
        class="sc-pyfCe cPxSom"
      >
        <input
          aria-invalid="false"
          aria-label="Show in blogs list"
          class="sc-jrcTuL bUxtxE"
          name="Show in blogs list"
          type="checkbox"
        />
        <svg
          class="sc-gKPRtg eSdzmv sc-kDvujY bYAPqH"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="sc-ipEyDJ enbqXF"
      >
        Show in blogs list
      </div>
    </label>
    <label
      class="sc-fEXmlR fcnjli"
      for="blogImageBorderColor_FORM_ID"
    >
      Blog image border color
    </label>
    <div
      class="sc-iBYQkv qDrdv sc-bqWxrE dvHoOv"
      placeholder="Blog image border color"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-dIfARi egSfao"
        id="blogImageBorderColor_FORM_ID"
        name="Blog image border color"
        value=""
      />
      <svg
        class="sc-gKPRtg eSdzmv sc-hHTYSt hQAsBU"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-fEXmlR fcnjli"
      for="content_FORM_ID"
    >
      Content
    </label>
    <div
      class="sc-iBYQkv qDrdv sc-ksBlkl fPaapV"
      placeholder="Content"
    >
      <textarea
        aria-disabled="false"
        aria-invalid="false"
        class="sc-dmctIk byTwkR"
        id="content_FORM_ID"
        name="Content"
      />
      <svg
        class="sc-gKPRtg eSdzmv sc-hHTYSt hQAsBU"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <button
      class="sc-dkrFOg jeTODs sc-eDWCr fujPXy"
      type="button"
    >
      <span
        class="sc-eDvSVe iqkXFe"
      />
    </button>
  </div>
</div>
`;

exports[`<BlogForm /> Should render correctly with no blog id 1`] = `
<div>
  <div
    class="sc-csuSiG"
  >
    <label
      class="sc-fEXmlR fcnjli"
      for="requestedId_FORM_ID"
    >
      Requested ID
    </label>
    <div
      class="sc-iBYQkv qDrdv sc-bqWxrE dvHoOv"
      placeholder="Requested ID"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-dIfARi egSfao"
        id="requestedId_FORM_ID"
        name="Requested ID"
        value=""
      />
      <svg
        class="sc-gKPRtg eSdzmv sc-hHTYSt hQAsBU"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-fEXmlR fcnjli"
      for="title_FORM_ID"
    >
      Title
    </label>
    <div
      class="sc-iBYQkv qDrdv sc-bqWxrE dvHoOv"
      placeholder="Title"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-dIfARi egSfao"
        id="title_FORM_ID"
        name="Title"
        value=""
      />
      <svg
        class="sc-gKPRtg eSdzmv sc-hHTYSt hQAsBU"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-fEXmlR fcnjli"
      for="tags_FORM_ID"
    >
      Tags
    </label>
    <div
      class="sc-iBYQkv qDrdv sc-bqWxrE dvHoOv"
      placeholder="Tags"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-dIfARi egSfao"
        id="tags_FORM_ID"
        name="Tags"
        value=""
      />
      <svg
        class="sc-gKPRtg eSdzmv sc-hHTYSt hQAsBU"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-fEXmlR fcnjli"
      for="blogImage_FORM_ID"
    >
      Blog image
    </label>
    <div
      class="sc-iBYQkv qDrdv sc-bqWxrE dvHoOv"
      placeholder="Blog image"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-dIfARi egSfao"
        id="blogImage_FORM_ID"
        name="Blog image"
        value=""
      />
      <svg
        class="sc-gKPRtg eSdzmv sc-hHTYSt hQAsBU"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-fEXmlR fcnjli"
      for="publishedTimestamp_FORM_ID"
    >
      Published timestamp
    </label>
    <div
      class="sc-iBYQkv qDrdv sc-bqWxrE dvHoOv"
      placeholder="Published timestamp"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-dIfARi egSfao"
        id="publishedTimestamp_FORM_ID"
        name="Published timestamp"
        value=""
      />
      <svg
        class="sc-gKPRtg eSdzmv sc-hHTYSt hQAsBU"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-fEXmlR fcnjli"
      for="blogCardDate_FORM_ID"
    >
      Blog card date override
    </label>
    <div
      class="sc-iBYQkv qDrdv sc-bqWxrE dvHoOv"
      placeholder="Blog card date override"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-dIfARi egSfao"
        id="blogCardDate_FORM_ID"
        name="Blog card date override"
        value=""
      />
      <svg
        class="sc-gKPRtg eSdzmv sc-hHTYSt hQAsBU"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-ftTHYK cnKNCo sc-fnGiBr dOtmda"
      id="light_FORM_ID"
    >
      <div
        class="sc-pyfCe cPxSom"
      >
        <input
          aria-invalid="false"
          aria-label="Light"
          class="sc-jrcTuL bUxtxE"
          name="Light"
          type="checkbox"
        />
        <svg
          class="sc-gKPRtg eSdzmv sc-kDvujY bYAPqH"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="sc-ipEyDJ enbqXF"
      >
        Light
      </div>
    </label>
    <label
      class="sc-ftTHYK cnKNCo sc-fnGiBr dOtmda"
      id="published_FORM_ID"
    >
      <div
        class="sc-pyfCe cPxSom"
      >
        <input
          aria-invalid="false"
          aria-label="Published"
          class="sc-jrcTuL bUxtxE"
          name="Published"
          type="checkbox"
        />
        <svg
          class="sc-gKPRtg eSdzmv sc-kDvujY bYAPqH"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="sc-ipEyDJ enbqXF"
      >
        Published
      </div>
    </label>
    <label
      class="sc-ftTHYK cnKNCo sc-fnGiBr dOtmda"
      id="showInBlogsList_FORM_ID"
    >
      <div
        class="sc-pyfCe cPxSom"
      >
        <input
          aria-invalid="false"
          aria-label="Show in blogs list"
          class="sc-jrcTuL bUxtxE"
          name="Show in blogs list"
          type="checkbox"
        />
        <svg
          class="sc-gKPRtg eSdzmv sc-kDvujY bYAPqH"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
          />
        </svg>
      </div>
      <div
        aria-hidden="true"
        class="sc-ipEyDJ enbqXF"
      >
        Show in blogs list
      </div>
    </label>
    <label
      class="sc-fEXmlR fcnjli"
      for="blogImageBorderColor_FORM_ID"
    >
      Blog image border color
    </label>
    <div
      class="sc-iBYQkv qDrdv sc-bqWxrE dvHoOv"
      placeholder="Blog image border color"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="sc-dIfARi egSfao"
        id="blogImageBorderColor_FORM_ID"
        name="Blog image border color"
        value=""
      />
      <svg
        class="sc-gKPRtg eSdzmv sc-hHTYSt hQAsBU"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <label
      class="sc-fEXmlR fcnjli"
      for="content_FORM_ID"
    >
      Content
    </label>
    <div
      class="sc-iBYQkv qDrdv sc-ksBlkl fPaapV"
      placeholder="Content"
    >
      <textarea
        aria-disabled="false"
        aria-invalid="false"
        class="sc-dmctIk byTwkR"
        id="content_FORM_ID"
        name="Content"
      />
      <svg
        class="sc-gKPRtg eSdzmv sc-hHTYSt hQAsBU"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 20c-.5 0-.9-.2-1.3-.5l-5.8-5.1c-.4-.4-.5-1-.1-1.4l1.3-1.5c.4-.4 1-.5 1.4-.1l4 3.5c.2.1.4.1.6 0l9.2-10.5c.4-.4 1-.5 1.4-.1l1.5 1.3c.4.4.5 1 .1 1.4L10.9 19.3c-.4.5-.9.7-1.5.7z"
        />
      </svg>
    </div>
    <button
      class="sc-dkrFOg jeTODs sc-eDWCr fujPXy"
      type="button"
    >
      <span
        class="sc-eDvSVe iqkXFe"
      />
    </button>
  </div>
</div>
`;
